Update Python Assignment Day4.ipynb

--- a/Python Assignment Day4.ipynb
+++ b/Python Assignment Day4.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The first Armstrong Number would be 1741725 , But the program is not Executing. Its Taking too long to execute. I have tried with the different range the program working fine."
+    "#### The first Armstrong Number would be 1741725 , But the program is not Executing. Its Taking too long to execute. I have tried with the different range the program working fine.  I've tried manually calculating if 1741725 is an armstrong number. It is not."
    ]
   }
  ],
